<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home"
            android:title="@string/title_home"/>

        <item
            android:id="@+id/order_history"
            android:icon="@drawable/ic_history"
            android:title="@string/title_order_history"/>


    </group>

    <item android:title="@string/title_setting">
        <menu>
            <item
                android:id="@+id/login"
                android:icon="@drawable/ic_login"
                android:title="@string/title_login"/>

            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/title_logout"/>
        </menu>
    </item>
</menu>